Basic stuff done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
     <script type="text/javascript" src="js/vendor/spin.min.js"> </script>
     <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
+    <script type="text/javascript" src="js/plugins.js"> </script>
     <script type="text/javascript" src="js/helpers.js"> </script>
     <script type="text/javascript" src="js/infowindow.js"> </script>
     <script type="text/javascript" src="js/NexsoMarker.js"> </script>
@@ -104,6 +105,30 @@
       </div>
       <div class="shadow"></div>
     </div>
+
+    <div class="welcome">
+      <div class="left-side">
+        <h1>Welcome to NEXSO explorer</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem. Aenean nec sapien et metus volutpat sollicitudin sed ut nisi. Integer tempor. Luctus neque cursus es suspendisse rutrum semper auctor. Maecenas.</p>
+      </div>
+      <div class="right-side">
+        <ul>
+          <li class="projects"><span>187</span> <strong>PROJECTS MAPPED</strong></li>
+          <li class="solutions"><span>187</span> <strong>SOLUTIONS CONNECTED</strong></li>
+          <li class="ashoka"><span class="ashoka">78</span> <strong>ASHOKA FELLOWS</strong></li>
+          <li class="agencies"><span>101</span> <strong>EXECUTING AGENCIES</strong></li>
+        </ul>
+        <form action="">
+          <div class="input_field">
+            <input type="text" name="search" autocomplete="off" />
+            <span class="placeholder">Search for an area...</span>
+            <div class="icon magnifier"></div>
+          </div>
+        </form>
+        <a href="#" class="btn">Start exploring</a>
+      </div>
+    </div>
+    <div id="splash-backdrop" class="backdrop"></div>
 
     <div id="zoom_controls"></div>
     <div id="timeline">
