Adds timeline cover

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <a href="#" class="btn">Start exploring</a>
       </div>
     </div>
+    <div id="timeline-cover" class="timeline-cover">Filter projects by years</div>
     <div id="splash-backdrop" class="backdrop"></div>
 
     <div id="zoom_controls"></div>
