Adds explore animation. Fixes problem with infowindows in firefox that prevented showing them

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="icon magnifier"></div>
           </div>
         </form>
-        <a href="#" class="btn">Start exploring</a>
+        <a href="#" class="btn" data-click="explore">Start exploring</a>
       </div>
     </div>
     <div id="timeline-cover" class="timeline-cover">Filter projects by years</div>
