--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem. Aenean nec sapien et metus volutpat sollicitudin sed ut nisi. Integer tempor. Luctus neque cursus es suspendisse rutrum semper auctor. Maecenas.</p>
       </div>
       <div class="right-side">
-        <ul>
-          <li class="projects"><span>187</span> <strong>PROJECTS MAPPED</strong></li>
-          <li class="solutions"><span>187</span> <strong>SOLUTIONS CONNECTED</strong></li>
-          <li class="ashoka"><span class="ashoka">78</span> <strong>ASHOKA FELLOWS</strong></li>
-          <li class="agencies"><span>101</span> <strong>EXECUTING AGENCIES</strong></li>
+        <ul class="stats">
+          <li class="projects"><span>-</span> <strong>PROJECTS MAPPED</strong></li>
+          <li class="solutions"><span>-</span> <strong>SOLUTIONS CONNECTED</strong></li>
+          <li class="ashokas"><span class="ashoka">-</span> <strong>ASHOKA FELLOWS</strong></li>
+          <li class="agencies"><span>-</span> <strong>EXECUTING AGENCIES</strong></li>
         </ul>
         <form action="">
           <div class="input_field">
