Updates counters. Adds filter helps

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
       <div class="shadow"></div>
     </div>
 
+    <div class="filter-help">
+      <div class="help">
+        <div class="download">Download the data</div>
+        <div class="filter">Filter the map</div>
+      </div>
+    </div>
+
     <div class="welcome">
       <div class="left-side">
         <h1>Welcome to NEXSO explorer</h1>
