--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           </div>
         </form>
         <a href="#" class="btn" data-click="explore">Start exploring</a>
+        <div class="or">or</div>
       </div>
     </div>
     <div id="timeline-cover" class="timeline-cover">Filter projects by years</div>
