Adds counter spinner

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
       </div>
       <div class="right-side">
         <ul class="stats">
-          <li class="projects"><span>-</span> <strong>PROJECTS MAPPED</strong></li>
-          <li class="solutions"><span>-</span> <strong>SOLUTIONS CONNECTED</strong></li>
-          <li class="ashokas"><span class="ashoka">-</span> <strong>ASHOKA FELLOWS</strong></li>
-          <li class="agencies"><span>-</span> <strong>EXECUTING AGENCIES</strong></li>
+          <li class="projects disabled"><span>00</span> <strong>PROJECTS MAPPED</strong></li>
+          <li class="solutions disabled"><span>00</span> <strong>SOLUTIONS CONNECTED</strong></li>
+          <li class="ashokas disabled"><span>00</span> <strong>ASHOKA FELLOWS</strong></li>
+          <li class="agencies disabled"><span>00</span> <strong>EXECUTING AGENCIES</strong></li>
         </ul>
         <form action="">
           <div class="input_field">
