--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="nav">
       <div class="content">
-        <h1>Explorer</h1>
+        <h1><a href="#" data-click="welcome">Explorer</a></h1>
         <ul class="filters">
           <li>
           <a href="#" data-toggle="filter">Iati</a>
