--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     <div class="nav">
       <div class="content">
         <h1><a href="#" data-click="welcome">Explorer</a></h1>
+
+        <div class="input_field">
+          <input type="text" />
+          <span class="placeholder">Search for an area...</span>
+          <a href="#" class="icon magnifier dark" data-click="search"></a>
+        </div>
+
         <ul class="filters">
           <li>
           <a href="#" data-toggle="filter">Iati</a>
@@ -99,9 +106,9 @@
             <div class="t"></div>
             <div class="b"></div>
           </div>
-
           </li>
         </ul>
+
         <div class="cancel"></div>
       </div>
       <div class="shadow"></div>
@@ -129,8 +136,8 @@
         <form action="">
           <div class="input_field">
             <input type="text" id="addresspicker" name="search" placeholder="" autocomplete="off" />
-            <input type="hidden" id="lat" data-geo="lat"/>
-            <input type="hidden" id="lng" data-geo="lng"/>
+            <input type="hidden" id="lat" data-geo="lat" />
+            <input type="hidden" id="lng" data-geo="lng" />
             <span class="placeholder">Search for an area...</span>
             <a href="#" class="icon magnifier" data-click="visit"></a>
           </div>
@@ -165,12 +172,16 @@
 
     <div id="map"></div>
     <div id="aside" class="aside hidden"> 
-      <div class="content">
+      <div class="content search">
+        Search
+      </div>
+      <div class="content project">
         <div class="header">
           <div class="hgroup">
             <h4>NEXSO PROJECT</h4>
             <h2>Regional Intercooperative Market for the Poor</h2>
           </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem... <a href="#">read more</a></p>
         </div>
         <ul>
           <li class="icon budget money"><h4>Funded amount</h4><span>$000.000</span></li>
@@ -185,55 +196,55 @@
     <div id="minispinner_wrapper"></div>
     <script id="infowindow-template" type="text/x-underscore-template">
       <div class="box <%= overlayType %>">
-      <div class="content">
-      <div class="header">
-      <div class="hgroup">
-      <% if (overlayType == "project") { %>
-        <h4>Nexso project</h4>
-        <h2><%= name %></h2>
-        <% } else if (overlayType == "ashokas") { %>
-          <h4>Ashoka fellow</h4>
-          <h2><%= name %></h2>
-          <% } else if (overlayType == "agencies") { %>
-            <h4>Executing agency</h4>
-            <h2><%= agency_name %></h2>
-            <% } %>
+        <div class="content">
+          <div class="header">
+            <div class="hgroup">
+              <% if (overlayType == "project") { %>
+                <h4>Nexso project</h4>
+                <h2><%= name %></h2>
+                <% } else if (overlayType == "ashokas") { %>
+                <h4>Ashoka fellow</h4>
+                <h2><%= name %></h2>
+                <% } else if (overlayType == "agencies") { %>
+                <h4>Executing agency</h4>
+                <h2><%= agency_name %></h2>
+                <% } %>
             </div>
-            </div>
-            <% if (overlayType == "project") { %>
-              <a href="#" class="btn">View project details</a>
-              <h4>Solution</h4>
-              <ul class="solutions">
+          </div>
+          <% if (overlayType == "project") { %>
+            <a href="#" class="btn">View project details</a>
+            <h4>Solution</h4>
+            <ul class="solutions">
               <li><a href="#" target="_blank">…</a> </li>
-              </ul>
-              <% } else if (overlayType == "ashokas") { %>
+            </ul>
+            <% } else if (overlayType == "ashokas") { %>
+            <% if (solution_name) { %>
+              <h4>Solutions</h4>
+              <ul>
                 <% if (solution_name) { %>
-                  <h4>Solutions</h4>
-                  <ul>
-                  <% if (solution_name) { %>
-                    <li><a href="<%= solution_url %>" target="_blank"><%= solution_name %></a> </li>
-                    <% } %>
-                    </ul>
-                    <% } %>
-                    <% if (agency_url) {  %>
-                      <h4>More info</h4>
-                      <ul>
-                      <li><a href="<%= agency_url %>" target="_blank">Agency profile at FOMIN</a> </li>
-                      </ul>
-                      <% } %>
-                      <% } else { %>
-                        <% if (agency_url) {  %>
-                          <h4>More info</h4>
-                          <ul>
-                          <li><a href="<%= agency_url %>" target="_blank">Agency profile at FOMIN</a> </li>
-                          </ul>
-                          <% } %>
-                          <%   if (projects) { %><h4>Projects</h4><ul><%= projects %></ul><% } %>
-                          <% } %>
-                          </div>
-                          <a href="#" class="close"></a>
-                          <div class="t"></div><div class="b"></div>
-                          </div>
-                        </script>
-                      </body>
-                    </html>
+                  <li><a href="<%= solution_url %>" target="_blank"><%= solution_name %></a> </li>
+                  <% } %>
+              </ul>
+              <% } %>
+            <% if (agency_url) {  %>
+              <h4>More info</h4>
+              <ul>
+                <li><a href="<%= agency_url %>" target="_blank">Agency profile at FOMIN</a> </li>
+              </ul>
+              <% } %>
+            <% } else { %>
+            <% if (agency_url) {  %>
+              <h4>More info</h4>
+              <ul>
+                <li><a href="<%= agency_url %>" target="_blank">Agency profile at FOMIN</a> </li>
+              </ul>
+              <% } %>
+            <%   if (projects) { %><h4>Projects</h4><ul><%= projects %></ul><% } %>
+            <% } %>
+        </div>
+        <a href="#" class="close"></a>
+        <div class="t"></div><div class="b"></div>
+      </div>
+    </script>
+  </body>
+</html>
