Adds closure compiler

--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@
     <div id="map"></div>
     <div id="aside" class="aside hidden"> 
       <div class="content search">
-        Search
+        <ul class="legend">
+          <li class="icon agency">Executing agencies</li>
+          <li class="icon ashoka">Ashoka fellows</li>
+        </ul>
       </div>
       <div class="content project">
         <div class="header">
