--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1><a href="#" data-click="welcome">Explorer</a></h1>
 
         <div class="input_field">
-          <input type="text" />
+          <input type="text" id="autocomplete" />
           <span class="placeholder">Search for an area...</span>
           <a href="#" class="icon magnifier dark" data-click="search"></a>
         </div>
@@ -175,9 +175,10 @@
     <div id="aside" class="aside hidden"> 
       <div class="content search">
         <ul class="legend">
-          <li class="icon agency">Executing agencies</li>
-          <li class="icon ashoka">Ashoka fellows</li>
+          <li class="icon agency"><strong>Executing agencies</strong></li>
+          <li class="icon ashoka"><strong>Ashoka fellows</strong></li>
         </ul>
+        <div class="results"></div>
       </div>
       <div class="content project">
         <div class="header">
@@ -187,7 +188,7 @@
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem... <a href="#">read more</a></p>
         </div>
-        <ul>
+        <ul class="data">
           <li class="icon budget money"><h4>Funded amount</h4><span>$000.000</span></li>
           <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Date not available</span></li>
           <li class="icon agency gear"><h4>Executing agency</h4><a href="#" target="_blank">...</a></li>
