Adds autocomplete + filter animation

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <div class="content">
         <h1><a href="#" data-click="welcome">Explorer</a></h1>
 
+        <div class="options cf">
         <div class="input_field">
           <input type="text" id="autocomplete" />
           <span class="placeholder">Search for an area...</span>
@@ -111,6 +112,7 @@
         </ul>
 
         <div class="cancel"></div>
+</div>
       </div>
       <div class="shadow"></div>
     </div>
