Shows topics. Improves disabling filter

--- a/index.html
+++ b/index.html
@@ -39,80 +39,78 @@
         <h1><a href="#" data-click="welcome">Explorer</a></h1>
 
         <div class="options cf">
-        <div class="input_field">
-          <input type="text" id="autocomplete" />
-          <span class="placeholder">Search for an area...</span>
-          <a href="#" class="icon magnifier dark" data-click="search"></a>
-        </div>
+          <div class="input_field">
+            <input type="text" id="autocomplete" />
+            <span class="placeholder">Search for an area...</span>
+            <a href="#" class="icon magnifier dark" data-click="search"></a>
+          </div>
 
-        <ul class="filters">
-          <li>
-          <a href="#" data-toggle="filter">Iati</a>
-          <div class="filter iati">
-            <div class="content cf">
-              <ul class="symbols">
-                <li><div class="icon iati"></div></li>
-              </ul>
-              <div class="legend">
-                <h3><a href="http://www.openaidregister.org/organizations/104/projects.xml">DOWNLOAD (IATI)</a></h3>
-                <p>Powered by <a href="http://www.openaidregister.org/">OpenAidRegister</a></p>
+          <ul class="filters">
+            <li>
+            <a href="#" data-toggle="filter">Iati</a>
+            <div class="filter iati">
+              <div class="content cf">
+                <ul class="symbols">
+                  <li><div class="icon iati"></div></li>
+                </ul>
+                <div class="legend">
+                  <h3><a href="http://www.openaidregister.org/organizations/104/projects.xml">DOWNLOAD (IATI)</a></h3>
+                  <p>Powered by <a href="http://www.openaidregister.org/">OpenAidRegister</a></p>
+                </div>
               </div>
+              <div class="t"></div>
+              <div class="b"></div>
             </div>
-            <div class="t"></div>
-            <div class="b"></div>
-          </div>
-          </li>
+            </li>
 
-          <li><a href="#" data-toggle="filter">View</a>
+            <li><a href="#" data-toggle="filter">View</a>
 
-          <div class="filter view">
-            <div class="content cf">
-              <ul class="symbols">
-                <li><div class="icon projects"></div></li>
-                <li><div class="icon agencies"></div></li>
-                <li><div class="icon ashokas"></div></li>
-              </ul>
-              <ul id="type-filter" class="ticks">
-                <li id="projects" class="selected"><a href="#">Projects</a></li>
-                <li id="agencies" class="selected"><a href="#">Executive agencies</a></li>
-                <li id="ashokas" class="selected"><a href="#">Ashoka fellows</a></li>
-              </ul>
+            <div class="filter view">
+              <div class="content cf">
+                <ul class="symbols">
+                  <li><div class="icon projects"></div></li>
+                  <li><div class="icon agencies"></div></li>
+                  <li><div class="icon ashokas"></div></li>
+                </ul>
+                <ul id="type-filter" class="ticks">
+                  <li id="projects" class="selected"><a href="#">Projects</a></li>
+                  <li id="agencies" class="selected"><a href="#">Executive agencies</a></li>
+                  <li id="ashokas" class="selected"><a href="#">Ashoka fellows</a></li>
+                </ul>
+              </div>
+              <div class="t"></div>
+              <div class="b"></div>
             </div>
-            <div class="t"></div>
-            <div class="b"></div>
-          </div>
 
-          </li>
-          <li>
-          <a href="#" data-toggle="filter">Filter</a>
+            </li>
+            <li>
+            <a href="#" data-toggle="filter">Filter</a>
 
-          <div class="filter filters">
-            <div class="content cf">
-              <h3 class="solution">By solution</h3>
-              <ul id="solution-filter" class="radio">
-                <li id="all"><a href="#">All</a></li>
-                <li id="solutions"><a href="#">Only fomin solutions</a></li>
-              </ul>
+            <div class="filter filters">
+              <div class="content cf">
+                <h3 class="solution">By solution</h3>
+                <ul id="solution-filter" class="radio">
+                  <li id="all"><a href="#">All</a></li>
+                  <li id="solutions"><a href="#">Only fomin solutions</a></li>
+                </ul>
 
-              <h3 class="topic">By topic</h3>
-              <ul id="topic-filter" class="ticks">
-                <li id="tourism" class="t1 selected"><a href="#">Sustainable tourism</a></li>
-                <li id="local" class="t2 selected"><a href="#">Local economic dev.</a></li>
-                <li id="employment" class="t3 selected"><a href="#">Youth employment</a></li>
-                <li id="woman" class="t4 selected"><a href="#">Women entrepeneurship</a></li>
-                <li id="financing" class="t5 selected"><a href="#">Early stage financing</a></li>
-                <li id="rural" class="t6 selected"><a href="#">Rural microfinance</a></li>
-              </ul>
+                <h3 class="topic">By topic</h3>
+                <ul id="topic-filter" class="ticks">
+                  <li id="tourism" class="t1 selected"><a href="#">Sustainable tourism</a></li>
+                  <li id="local" class="t2 selected"><a href="#">Local economic dev.</a></li>
+                  <li id="employment" class="t3 selected"><a href="#">Youth employment</a></li>
+                  <li id="woman" class="t4 selected"><a href="#">Women entrepeneurship</a></li>
+                  <li id="financing" class="t5 selected"><a href="#">Early stage financing</a></li>
+                  <li id="rural" class="t6 selected"><a href="#">Rural microfinance</a></li>
+                </ul>
 
+              </div>
+              <div class="t"></div>
+              <div class="b"></div>
             </div>
-            <div class="t"></div>
-            <div class="b"></div>
-          </div>
-          </li>
-        </ul>
-
-        <div class="cancel"></div>
-</div>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="shadow"></div>
     </div>
@@ -195,6 +193,7 @@
           <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Date not available</span></li>
           <li class="icon agency gear"><h4>Executing agency</h4><a href="#" target="_blank">...</a></li>
           <li class="icon solution star"><h4>Solutions</h4><a href="#" target="_blank">Solution not available</a></li>
+          <li class="icon topic star"><h4>Topic</h4><span>...</span></li>
           <li class="icon more plus"><h4>More information</h4><a href="#" target="_blank">External link</a></li>
         </ul>
       </div>
