Fixes jscrollpane. Adjusts height automatically

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
           <li class="icon agency"><strong>Executing agencies</strong></li>
           <li class="icon ashoka"><strong>Ashoka fellows</strong></li>
         </ul>
-        <div class="results scroll-pane-search"></div>
+        <div class="results scroll-pane-search">
+        </div>
       </div>
       <div class="content project">
         <div class="header">
@@ -193,6 +194,7 @@
         </div>
         <div class="scroll-pane-project">
           <ul class="data">
+            <li class="icon nexso_code star"><h4>NEXSO code</h4><span>...</span></li>
             <li class="icon budget money"><h4>Funded amount</h4><span>$000.000</span></li>
             <li class="icon approvalDate calendar"><h4>Approval date</h4><span>Date not available</span></li>
             <li class="icon agency gear"><h4>Executing agency</h4><a href="#" target="_blank">...</a></li>
