--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="options cf">
           <div class="input_field">
             <input type="text" id="autocomplete" />
-            <span class="placeholder">Search for an project...</span>
+            <span class="placeholder">Search for a project...</span>
             <a href="#" class="icon magnifier dark" data-click="search"></a>
           </div>
 
