--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
     <!--<script type="text/javascript" src="js/all.js"> </script>-->
-    <script src="js/vendor/modernizr-2.5.3.min.js"></script>
+    <script type="text/javascript" src="js/vendor/modernizr-2.5.3.min.js"></script>
     <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>
