--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
     <!--<script type="text/javascript" src="js/all.js"> </script>-->
-    <script type="text/javascript" src="js/vendor/modernizr-2.5.3.min.js"></script>
+    <script src="js/vendor/modernizr-2.5.3.min.js"></script>
     <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>
@@ -48,8 +48,10 @@
 
         <div class="options cf">
           <div class="input_field">
-            <input type="text" id="autocomplete" />
-            <span class="placeholder">Search for a project...</span>
+            <input type="text" class="addresspicker" placeholder="" autocomplete="off" />
+            <input type="hidden" class="lat" data-geo="lat" />
+            <input type="hidden" class="lng" data-geo="lng" />
+            <span class="placeholder">Search for an area...</span>
             <a href="#" class="icon magnifier dark" data-click="search"></a>
           </div>
 
@@ -144,11 +146,11 @@
         </ul>
         <form action="">
           <div class="input_field">
-            <input type="text" id="addresspicker" name="search" placeholder="" autocomplete="off" />
-            <input type="hidden" id="lat" data-geo="lat" />
-            <input type="hidden" id="lng" data-geo="lng" />
+            <input type="text" class="addresspicker" name="search" placeholder="" autocomplete="off" />
+            <input type="hidden" class="lat" data-geo="lat" />
+            <input type="hidden" class="lng" data-geo="lng" />
             <span class="placeholder">Search for an area...</span>
-            <a href="#" class="icon magnifier" data-click="visit"></a>
+            <a href="#" class="icon magnifier" data-click="search"></a>
           </div>
         </form>
         <a href="#" class="btn" data-click="explore">Start exploring</a>
@@ -233,11 +235,9 @@
           <% if (overlayType == "project") { %>
             <a href="#" class="btn">View project details</a>
             <% if (solution_name) { %>
-              <h4>Solutions</h4>
-              <ul>
-                <% if (solution_name) { %>
-                  <li><a href="<%= solution_url %>" target="_blank"><%= solution_name %></a> </li>
-                  <% } %>
+              <h4>Solution</h4>
+              <ul class="solutions">
+                <li><a href="<%= solution_url %>" target="_blank"><%= solution_name %></a> </li>
               </ul>
               <% } %>
             <% if (agencyName != null) { %>
