--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
           <li class="icon ashoka"><strong>Ashoka fellows</strong></li>
         </ul>
         <div class="results scroll-pane-search">
+          <strong class="title">0 projects on screen</strong>
         </div>
       </div>
       <div class="content project">
