--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </ul>
         </div>
       </div>
-      <a href="#" class="close"></a>
+      <a href="#" class="toggle closed"></a>
     </div>
     <div id="minispinner_wrapper"></div>
     <script id="infowindow-template" type="text/x-underscore-template">
