--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+    <!--[if IE]>
+    <link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <![endif]--> 
+
     <script src="js/vendor/modernizr-2.5.3.min.js"></script>
+    <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
   </head>
   <body>
     <div class="nav">
@@ -264,10 +270,9 @@
     </script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">google.load("jquery", "1.7.1");</script>
-
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
-    <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
-    <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
+
+    <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>
     <script type="text/javascript" src="js/vendor/date.js"> </script>
     <script type="text/javascript" src="js/vendor/jquery.jscrollpane.min.js"> </script>
@@ -286,5 +291,9 @@
     <script type="text/javascript" src="js/NexsoMarker.js"> </script>
     <script type="text/javascript" src="js/circle.js"> </script>
     <script type="text/javascript" src="js/app.js"> </script>
+    -->
+
+    <script type="text/javascript" src="js/all.js"> </script>
+
   </body>
 </html>
