Adds line background in the search pane

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
           <li class="icon agency"><strong>Executing agencies</strong></li>
           <li class="icon ashoka"><strong>Ashoka fellows</strong></li>
         </ul>
+        <strong class="counter">0 projects on screen</strong>
         <div class="results scroll-pane-search">
-          <strong class="title">0 projects on screen</strong>
         </div>
       </div>
       <div class="content project">
