--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               <div class="t"></div>
               <div class="b"></div>
             </div>
-
             </li>
+
             <li>
             <a href="#" data-toggle="filter">Filter</a>
 
@@ -224,7 +224,13 @@
             </ul>
             <% } %>
             <% } else if (overlayType == "ashokas") { %>
-            <% if (topic_ids) { %>
+            <% if (topic_names) { %>
+              <h4>Topic</h4>
+              <ul>
+                  <li><%= topic_names %></li>
+              </ul>
+              <% } %>
+            <% if (country) { %>
               <h4>Country</h4>
               <ul>
                   <li><%= country %></li>
@@ -272,26 +278,25 @@
     <script type="text/javascript">google.load("jquery", "1.7.1");</script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
 
-    <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
-    <script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>
-    <script type="text/javascript" src="js/vendor/date.js"> </script>
-    <script type="text/javascript" src="js/vendor/jquery.jscrollpane.min.js"> </script>
-    <script type="text/javascript" src="js/vendor/jquery.mousewheel.js"> </script>
-    <script type="text/javascript" src="js/vendor/mwheelIntent.js"> </script>
-    <script type="text/javascript" src="js/vendor/underscore.string.js"> </script>
-    <script type="text/javascript" src="js/vendor/lodash.min.js"> </script>
-    <script type="text/javascript" src="js/vendor/backbone.js"> </script>
-    <script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
-    <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
-    <script type="text/javascript" src="js/vendor/spin.min.js"> </script>
-    <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
-    <script type="text/javascript" src="js/plugins.js"> </script>
-    <script type="text/javascript" src="js/helpers.js"> </script>
-    <script type="text/javascript" src="js/infowindow.js"> </script>
-    <script type="text/javascript" src="js/NexsoMarker.js"> </script>
-    <script type="text/javascript" src="js/circle.js"> </script>
-    <script type="text/javascript" src="js/app.js"> </script>
-    -->
+    <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/date.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/jquery.jscrollpane.min.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/jquery.mousewheel.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/mwheelIntent.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/underscore.string.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/lodash.min.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/backbone.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/accounting.min.js"> </script>-->
+    <!--<script type="text/javascript" src="js/vendor/spin.min.js"> </script>-->
+    <!--<script type="text/javascript" src="js/backbone.cartodb.js"> </script>-->
+    <!--<script type="text/javascript" src="js/plugins.js"> </script>-->
+    <!--<script type="text/javascript" src="js/helpers.js"> </script>-->
+    <!--<script type="text/javascript" src="js/infowindow.js"> </script>-->
+    <!--<script type="text/javascript" src="js/NexsoMarker.js"> </script>-->
+    <!--<script type="text/javascript" src="js/circle.js"> </script>-->
+    <!--<script type="text/javascript" src="js/app.js"> </script>-->
 
     <script type="text/javascript" src="js/all.js"> </script>
 
