--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <![endif]--> 
 
     <script src="js/vendor/modernizr-2.5.3.min.js"></script>
-    <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
   </head>
   <body>
     <div class="nav">
@@ -274,31 +273,9 @@
         <div class="t"></div><div class="b"></div>
       </div>
     </script>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">google.load("jquery", "1.7.1");</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
-
-    <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/date.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/jquery.jscrollpane.min.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/jquery.mousewheel.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/mwheelIntent.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/underscore.string.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/lodash.min.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/backbone.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/accounting.min.js"> </script>-->
-    <!--<script type="text/javascript" src="js/vendor/spin.min.js"> </script>-->
-    <!--<script type="text/javascript" src="js/backbone.cartodb.js"> </script>-->
-    <!--<script type="text/javascript" src="js/plugins.js"> </script>-->
-    <!--<script type="text/javascript" src="js/helpers.js"> </script>-->
-    <!--<script type="text/javascript" src="js/infowindow.js"> </script>-->
-    <!--<script type="text/javascript" src="js/NexsoMarker.js"> </script>-->
-    <!--<script type="text/javascript" src="js/circle.js"> </script>-->
-    <!--<script type="text/javascript" src="js/app.js"> </script>-->
-
     <script type="text/javascript" src="js/all.js"> </script>
-
   </body>
 </html>
