--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>NEXSO</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <link href='http://fonts.googleapis.com/css?family=News+Cycle:400normal,700normal&subset=all' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=News+Cycle&subset=all' rel='stylesheet' type='text/css'>
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     <!--[if IE]>
