--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <ul class="stats">
           <li class="projects disabled"><span>00</span> <strong>PROJECTS MAPPED</strong></li>
           <li class="solutions disabled"><span>00</span> <strong>SOLUTIONS CONNECTED</strong></li>
-          <li class="ashokas disabled"><span>00</span> <strong>ASHOKA FELLOWS</strong></li>
+          <li class="ashokas disabled"><span>00</span> <strong>ASHOKA NETWORK</strong></li>
           <li class="agencies disabled"><span>00</span> <strong>EXECUTING AGENCIES</strong></li>
         </ul>
         <form action="">
