Changes lorem ipsum

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="welcome">
       <div class="left-side">
         <h1>Welcome to NEXSO explorer</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem. Aenean nec sapien et metus volutpat sollicitudin sed ut nisi. Integer tempor. Luctus neque cursus es suspendisse rutrum semper auctor. Maecenas.</p>
+        <p>NEXSO Explorer is an interactive map providing users with visual access to selected location-specic information, such as MIF project data, NEXSO Solutions, featured knowledge products and<br />topic-specic data provided by MIF partners</p>
       </div>
       <div class="right-side">
         <ul class="stats">
