Removes IATA download. Changes aside title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
 
           <ul class="filters">
-            <li>
+            <!--<li>
             <a href="#" data-toggle="filter">Iati</a>
             <div class="filter iati">
               <div class="content cf">
@@ -47,7 +47,7 @@
               <div class="t"></div>
               <div class="b"></div>
             </div>
-            </li>
+            </li>-->
 
             <li><a href="#" data-toggle="filter">View</a>
 
@@ -103,7 +103,6 @@
 
     <div class="filter-help">
       <div class="help">
-        <div class="download">Download the data</div>
         <div class="filter">Filter the map</div>
       </div>
     </div>
@@ -171,7 +170,7 @@
       <div class="content project">
         <div class="header">
           <div class="hgroup">
-            <h4>NEXSO PROJECT</h4>
+            <h4>Project Title</h4>
             <h2>Regional Intercooperative Market for the Poor</h2>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem... <a href="#">read more</a></p>
