Changes 'Nexso Project' to 'MIF PROJECT'

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="content project">
         <div class="header">
           <div class="hgroup">
-            <h4>Project Title</h4>
+            <h4>MIF Project</h4>
             <h2>Regional Intercooperative Market for the Poor</h2>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum semper auctor. Maecenas rhoncus auctor ligula, a luctus neque cursus et. Nam purus leo, dictum ac vulputate non, semper euismod sem... <a href="#">read more</a></p>
@@ -197,7 +197,7 @@
           <div class="header">
             <div class="hgroup">
               <% if (overlayType == "project") { %>
-                <h4>Nexso project</h4>
+                <h4>MIF Project</h4>
                 <h2><%= name %></h2>
                 <% } else if (overlayType == "ashokas") { %>
                 <h4>Ashoka Network</h4>
