Adds CartoDB logo.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
               </div>
             </div>
 
+            <a href="http://www.cartodb.com" class="cartodb-logo" title="Powered by CartoDB"></a>
             <div id="map"></div>
             <div id="aside" class="aside hidden"> 
               <div class="content search">
