--- a/index.html
+++ b/index.html
@@ -277,6 +277,6 @@
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
               <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
-              <script type="text/javascript" src="js/all.js"></script>
+              <script type="text/javascript" src="js/all.js?v=1.0"></script>
             </body>
           </html>
