Changed NEXSO Project with MIF Project

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <div class="header">
                     <div class="hgroup">
                       <% if (overlayType == "project") { %>
-                        <h4>Nexso project</h4>
+                        <h4>MIF project</h4>
                         <h2><%= name %></h2>
                         <% } else if (overlayType == "ashokas") { %>
                         <h4>Ashoka Network</h4>
