Adds back button

--- a/index.html
+++ b/index.html
@@ -32,22 +32,6 @@
                   </div>
 
                   <ul class="filters">
-                    <!--<li>
-                    <a href="#" data-toggle="filter">Iati</a>
-                    <div class="filter iati">
-                      <div class="content cf">
-                        <ul class="symbols">
-                          <li><div class="icon iati"></div></li>
-                        </ul>
-                        <div class="legend">
-                          <h3><a href="http://www.openaidregister.org/organizations/104/projects.xml">DOWNLOAD (IATI)</a></h3>
-                          <p>Powered by <a href="http://www.openaidregister.org/">OpenAidRegister</a></p>
-                        </div>
-                      </div>
-                      <div class="t"></div>
-                      <div class="b"></div>
-                    </div>
-                    </li>-->
 
                     <li><a href="#" data-toggle="filter">View</a>
 
@@ -97,7 +81,9 @@
                     </li>
                   </ul>
                 </div>
+
               </div>
+                <a href="#" class="back toggle">Back</a>
               <div class="shadow"></div>
             </div>
 
