--- a/index.html
+++ b/index.html
@@ -263,26 +263,26 @@
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
               <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
-              <!--<script type="text/javascript" src="js/all.js"></script>-->
-              <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
-              <script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>
-              <script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>
-              <script type="text/javascript" src="js/vendor/date.js"> </script>
-              <script type="text/javascript" src="js/vendor/jquery.jscrollpane.min.js"> </script>
-              <script type="text/javascript" src="js/vendor/jquery.mousewheel.js"> </script>
-              <script type="text/javascript" src="js/vendor/mwheelIntent.js"> </script>
-              <script type="text/javascript" src="js/vendor/underscore.string.js"> </script>
-              <script type="text/javascript" src="js/vendor/lodash.min.js"> </script>
-              <script type="text/javascript" src="js/vendor/backbone.js"> </script>
-              <script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>
-              <script type="text/javascript" src="js/vendor/accounting.min.js"> </script>
-              <script type="text/javascript" src="js/vendor/spin.min.js"> </script>
-              <script type="text/javascript" src="js/backbone.cartodb.js"> </script>
-              <script type="text/javascript" src="js/plugins.js"> </script>
-              <script type="text/javascript" src="js/helpers.js"> </script>
-              <script type="text/javascript" src="js/infowindow.js"> </script>
-              <script type="text/javascript" src="js/NexsoMarker.js"> </script>
-              <script type="text/javascript" src="js/circle.js"> </script>
-              <script type="text/javascript" src="js/app.js"> </script>
+              <script type="text/javascript" src="js/all.js"></script>
+              <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/date.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/jquery.jscrollpane.min.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/jquery.mousewheel.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/mwheelIntent.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/underscore.string.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/lodash.min.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/backbone.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/GeoJSON.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/accounting.min.js"> </script>-->
+              <!--<script type="text/javascript" src="js/vendor/spin.min.js"> </script>-->
+              <!--<script type="text/javascript" src="js/backbone.cartodb.js"> </script>-->
+              <!--<script type="text/javascript" src="js/plugins.js"> </script>-->
+              <!--<script type="text/javascript" src="js/helpers.js"> </script>-->
+              <!--<script type="text/javascript" src="js/infowindow.js"> </script>-->
+              <!--<script type="text/javascript" src="js/NexsoMarker.js"> </script>-->
+              <!--<script type="text/javascript" src="js/circle.js"> </script>-->
+              <!--<script type="text/javascript" src="js/app.js"> </script>-->
             </body>
           </html>
