--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
               <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.8&amp;key=AIzaSyCbRutFCciUBrk1yMRPJEV59kq5ZgrJwEc&amp;sensor=false&amp;libraries=places&amp;v=3.7"> </script>
               <script type="text/javascript" src="js/all.js"></script>
-              <script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>
+              <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>-->
               <!--<script type="text/javascript" src="js/vendor/jquery-ui-1.8.18.custom.min.js"> </script>-->
               <!--<script type="text/javascript" src="js/vendor/selectivizr-min.js"> </script>-->
               <!--<script type="text/javascript" src="js/vendor/jquery.geocomplete.js"> </script>-->
