Fixes ashoka loading

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <ul id="type-filter" class="ticks">
                           <li id="projects" class="selected"><a href="#">Projects</a></li>
                           <li id="agencies" class="selected"><a href="#">Executive agencies</a></li>
-                          <li id="ashokas" class="selected"><a href="#">Ashoka network</a></li>
+                          <li id="ashokas"><a href="#">Ashoka network</a></li>
                         </ul>
                       </div>
                       <div class="t"></div>
