Adds mini icon for the project

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <li class="icon agency"><strong>Executing agencies</strong></li>
                   <li class="icon ashoka"><strong>Ashoka network</strong></li>
                 </ul>
-                <strong class="counter">0 projects on screen</strong>
+                <strong class="counter icon">0 projects on screen</strong>
                 <div class="results scroll-pane-search">
                 </div>
               </div>
