--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                   <li class="icon ashoka"><strong>Ashoka network</strong></li>
                 </ul>
                 <strong class="counter icon">0 projects on screen</strong>
+                  <div class="spinner"></div>
                 <div class="results scroll-pane-search">
                 </div>
               </div>
