Adds project view

--- a/frame.html
+++ b/frame.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Syria Deaths</title>
-    <meta name="description" content="Syrian Spring Casualties">
-    <meta name="author" content = "Vizzuality">
+    <title>NEXSO</title>
+    <meta name="description" content="NEXSO">
     <style type="text/css">
       body { background: #ccc; }
       iframe { position:absolute; top: 0; left: 0; right:0; bottom: 0; width: 100%; height: 100%; border: none; }
     </style>
   </head>
   <body>
-    <iframe src="index.html?param=test"></iframe>  
+    <iframe src="index.html?project=BO-M1038"></iframe>  
   </body>
 </html>
