--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
         <html lang="en">
           <head>
-            <title>NEXSO</title>
+            <title>NEXSO.</title>
             <meta charset="UTF-8">
             <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
             <link href='http://fonts.googleapis.com/css?family=News+Cycle&subset=all' rel='stylesheet' type='text/css'>
