added some explanations for the iframe embed

--- a/frame.html
+++ b/frame.html
@@ -5,10 +5,11 @@
     <title>NEXSO</title>
     <style type="text/css">
       body { background: #ccc; }
-      iframe { position:absolute; top: 0; left: 0; right:0; bottom: 0; width: 100%; height: 100%; border: none; }
+      iframe { position:absolute; top: 130px; left: 50px; right:0; bottom: 0; width: 75%; height: 75%; border: none; }
     </style>
   </head>
-  <body>
+  <body><h1>Example of using an Iframe to embed project <b>BO-M1038</b></h1>
+      <h3>Look at the source code please</h3>
     <iframe src="index.html?project=BO-M1038"></iframe>  
   </body>
 </html>
