--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           </head>
           <body>
             <div class="nav">
+              <div class="error"></div>
               <div class="content">
                 <h1><a href="#" data-click="welcome">Explorer</a></h1>
 
